login-box.css
:host {
  display: block;
  -moz-box-shadow: 0 0 10px #888;
  -webkit-box-shadow: 0 0 10px #888;
  box-shadow: 0 0 10px #888;
  max-width: 250px;
  min-width: 200px;
  padding: 15px;
  margin: 5px;
  font-family: sans-serif;
  text-align: center;
}

:host > paper-input {
  width: 90%;
}

content[select="[top]"]::content img.radial {
  border-radius: 50%;
}

#submitbutton {
  margin-top: 10px;
  width: 90%;
  background: #4059a9;
  color: white;
}

:host > h3 {
  margin-top: 5px;
}

